# dist/swagger.json
@@ -7,7 +7,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost:3000",
+            "url": "https://my-brand-backend-heoy.onrender.com",
             "description": "Gabriel's Brand server"
         }
     ],
@@ -162,147 +162,6 @@
                 "responses": {
                     "200": {
                         "description": "Users retrieved successfully"
-                    }
-                }
-            }
-        },
-        "/api/admin/signup": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "summary": "Sign up a new admin",
-                "tags": ["Admin-Authentication"],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "username": { "type": "string" },
-                                    "email": { "type": "string" },
-                                    "password": { "type": "string" }
-                                },
-                                "required": ["username", "email", "password"]
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Admin signed up successfully"
-                    }
-                }
-            }
-        },
-        "/api/admin/signin": {
-            "post": {
-                "summary": "Sign in an admin",
-                "tags": ["Admin-Authentication"],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "email": { "type": "string" },
-                                    "password": { "type": "string" }
-                                },
-                                "required": ["email", "password"]
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Admin signed in successfully"
-                    }
-                }
-            }
-        },
-        "/api/admin/{adminId}": {
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "summary": "Update an admin by ID",
-                "tags": ["Admin-Authentication"],
-                "parameters": [
-                    {
-                        "name": "adminId",
-                        "in": "path",
-                        "required": true,
-                        "description": "ID of the admin to update",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "username": { "type": "string" },
-                                    "email": { "type": "string" },
-                                    "password": { "type": "string" }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Admin updated successfully"
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "summary": "Delete an admin by ID",
-                "tags": ["Admin-Authentication"],
-                "parameters": [
-                    {
-                        "name": "adminId",
-                        "in": "path",
-                        "required": true,
-                        "description": "ID of the admin to delete",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Admin deleted successfully"
-                    }
-                }
-            }
-        },
-        "/api/admin": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "summary": "Get all admins",
-                "tags": ["Admin-Authentication"],
-                "responses": {
-                    "200": {
-                        "description": "Admins retrieved successfully"
                     }
                 }
             }
